--- a/contact.html
+++ b/contact.html
@@ -1,118 +1,140 @@
 <!DOCType html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Balanced Training</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    emailjs.init('NL_21Kssn6y6yz2Lw')
+  </script>
+  <title>Balanced Training</title>
+</head>
+
 <body>
-    <header>
-      <div>
-        <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
-          <div class="container-fluid no-padding">
-            <!--The image used has been supplied by Balanced Training-->
-            <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp" alt="Brand Logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button> 
-            <div id="navbarNav" class="collapse navbar-collapse">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-white">
-                <li class="nav-item booking-button d-none d-lg-block">
-                  <!--The link is the current Booking system address used by Balanced Training-->
-                  <a class="nav-link" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book Training</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="index.html" aria-current="page">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="gym.html">Gym</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="courses.html">Courses</a>
-                </li>
-                <li id="active" class="nav-item active">
-                  <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
-                </li>
-              </ul>
-            </div>
+  <header>
+    <div>
+      <nav class="navbar navbar-expand-md navbar-light fixed-top shadow p-3 mb-4 bg-white">
+        <div class="container-fluid no-padding">
+          <!--The image used has been supplied by Balanced Training-->
+          <a class="navbar-brand" href="index.html"><img class="brand-logo" src="assets/images/logo_blue.webp"
+              alt="Brand Logo"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="navbarNav" class="collapse navbar-collapse">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-white">
+              <li class="nav-item booking-button d-none d-lg-block">
+                <!--The link is the current Booking system address used by Balanced Training-->
+                <a class="nav-link" href="https://calendly.com/balancedtraining/gym-access" target="_blank">Book
+                  Training</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="index.html" aria-current="page">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="gym.html">Gym</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="courses.html">Courses</a>
+              </li>
+              <li id="active" class="nav-item active">
+                <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
           </div>
-        </nav>
-      </div>
-    </header>
-    <section>
-      <!--Top band under the header-->
-      <div class="container-fluid no-padding">
-        <div class="row">
-          <div class="col-6 col-sm-3 topcontact">
-            <!--The link is the current google maps address used by Balanced Training which should lead to directions-->
-            <a class="icon-link hover" href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866" target="_blank">
-              <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
-          </div>
-          <div class="col-6 col-sm-5 topcontact hover"><i class="bi bi-telephone-fill"></i> <a class="topcontact hover" href="tel:07764496281">07764496281</a><a class="topcontact hover phone" href="tel:01702382390"> 01702382390</a>
-          </div>
-          <div class="col-4 d-none d-sm-block no-padding">
+        </div>
+      </nav>
+    </div>
+  </header>
+  <section>
+    <!--Top band under the header-->
+    <div class="container-fluid no-padding">
+      <div class="row">
+        <div class="col-6 col-sm-3 topcontact">
+          <!--The link is the current google maps address used by Balanced Training which should lead to directions-->
+          <a class="icon-link hover"
+            href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866"
+            target="_blank">
+            <span class="hover"><i class="bi bi-pin-map-fill"></i> Directions</span></a>
+        </div>
+        <div class="col-6 col-sm-5 topcontact hover"><i class="bi bi-telephone-fill"></i> <a class="topcontact hover"
+            href="tel:07764496281">07764496281</a><a class="topcontact hover phone" href="tel:01702382390">
+            01702382390</a>
+        </div>
+        <div class="col-4 d-none d-sm-block no-padding">
           <div class="row social-top">
             <div class="col no-padding">
               <!--The link is the current Facebook address used by Balanced Training-->
               <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank" title="Link to Facebook">
-              <i class="bi bi-facebook icon-size"></i></a>
+                <i class="bi bi-facebook icon-size"></i></a>
             </div>
             <div class="col no-padding">
               <!--The link is the current instagram address used by Balanced Training-->
-              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank" title="Link to Instagram">
-              <i class="bi bi-instagram icon-size"></i></a>
+              <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank"
+                title="Link to Instagram">
+                <i class="bi bi-instagram icon-size"></i></a>
             </div>
             <div class="col no-padding">
               <!--The link is the current linkedin address used by Balanced Training-->
-              <a class="icon-link" href="https://www.linkedin.com/company/balanced-training/" target="_blank" title="Link to Linked In">
-              <i class="bi bi-linkedin icon-size"></i></a>
+              <a class="icon-link" href="https://www.linkedin.com/company/balanced-training/" target="_blank"
+                title="Link to Linked In">
+                <i class="bi bi-linkedin icon-size"></i></a>
             </div>
           </div>
-        </div>
         </div>
       </div>
-      <!--Form-->
-      <!--The link is the currently the thank you page expected after filling out a form-->
-      <form action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
-        <div class="container-fluid top-margin">
-          <div class="row">
-            <h1 class="contact-top">Get in contact!</h1>
-            <h2>If you'd like to find out more information please fill out the form below.</h2>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
-              <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1" >First Name</span>
-                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" required>
-              </div>
-              <div class="input-group mb-1">
-                  <span class="input-group-text basic-addon1">Last Name</span>
-                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name">
-              </div>
-              <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1">Email Address</span>
-                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text basic-addon1">Message:</span>
-                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area"></textarea>
-              </div>
-              <div class="text-center send-message-button">
-              <button type="submit" class="btn btn-primary" id="send-button">Send Message</button>
+    </div>
+    <form id="form" class="form" action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
+      <div class="container-fluid">
+        <div class="row">
+          <h1 class="contact-top">Get in contact!</h1>
+          <h2>If you'd like to find out more about <br> any of our services please fill out the form below.</h2>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
+            <div class="input-group mb-1">
+              <label class="input-group-text basic-addon1" for="from_name">Name</label>
+              <input class="form-control" placeholder="First Name" type="text" name="from_name" id="from_name" required>
             </div>
-         </div>
-        </div>
-        </div>
-      </form>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+            <div class="input-group mb-1">
+              <label class="input-group-text basic-addon1" for="contact_number">Phone Number</label>
+              <input type="text" class="form-control" placeholder="Phone Number" name="contact_number"
+                id="contact_number">
+            </div>
+            <div class="input-group mb-1">
+              <label class="input-group-text basic-addon1" for="reply_to">Email Address</label>
+              <input type="email" name="reply_to" id="reply_to" class="form-control" placeholder="Email Address"
+                required>
+            </div>
+            <div class="input-group mb-3">
+              <label for="message" class="input-group-text basic-addon1">Message:</label>
+              <textarea class="form-control" placeholder="Ask us anything" name="message" id="message"
+                required></textarea>
+            </div>
+
+            <div class="text-center send-message-button">
+              <input class="send-button btn btn-primary btn-large blue darken-4 center " type="submit" id="buttonsm"
+                value="Send Email" onclick="SendMail()">
+            </div>
+    </form>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  </body>
+  <script src="assets/js/email.js"></script>
+</body>
+
 </html>
