--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" integrity="sha384-EvBWSlnoFgZlXJvpzS+MAUEjvN7+gcCwH+qh7GRFOGgZO0PuwOFro7qPOJnLfe7l" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+      emailjs.init('NL_21Kssn6y6yz2Lw')
+    </script>
     <title>Balanced Training</title>
   </head>
 <body>
@@ -192,7 +196,7 @@
         </div>
       </div>
       <!--Form-->
-      <form action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
+      <form id="form" class="form" action="https://codegreg1.github.io/milestone_1_greg_goodrem/thank-you.html">
         <div class="container-fluid">
           <div class="row">
             <h1 class="contact-top">Get in contact!</h1>
@@ -201,27 +205,29 @@
           <div class="row justify-content-center">
             <div class="col-12 col-sm-10 col-lg-8 col-xl-6">
               <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1" >First Name</span>
-                <input type="text" id="first-name" class="form-control" placeholder="First Name" aria-label="first-name" aria-describedby="first-name" title="First name field" required>
+                <label class="input-group-text basic-addon1" for="from_name">Name</label>
+                <input class="form-control" placeholder="First Name" type="text" name="from_name" id="from_name" required>
               </div>
               <div class="input-group mb-1">
-                  <span class="input-group-text basic-addon1">Last Name</span>
-                  <input type="text" id="last-name" class="form-control" placeholder="Last Name" aria-label="last-name" aria-describedby="last-name" title="Last name field">
+                <label class="input-group-text basic-addon1" for="contact_number">Phone Number</label>
+                <input type="text" class="form-control" placeholder="Phone Number" name="contact_number"
+                  id="contact_number">
               </div>
               <div class="input-group mb-1">
-                <span class="input-group-text basic-addon1">Email Address</span>
-                <input type="email" id="email-address" class="form-control" placeholder="Email Address" aria-label="email" aria-describedby="email-address" required>
+                <label class="input-group-text basic-addon1" for="reply_to">Email Address</label>
+                <input type="email" name="reply_to" id="reply_to" class="form-control" placeholder="Email Address"
+                  required>
               </div>
               <div class="input-group mb-3">
-                <span class="input-group-text basic-addon1">Message:</span>
-                <textarea id="message-area" class="form-control" placeholder="Ask us anything" aria-label="message-area" title="Message field"></textarea>
+                <label for="message" class="input-group-text basic-addon1">Message:</label>
+                <textarea class="form-control" placeholder="Ask us anything" name="message" id="message"
+                  required></textarea>
               </div>
+  
               <div class="text-center send-message-button">
-              <button type="submit" class="btn btn-primary" id="send-button" >Send Message</button>
-            </div>
-         </div>
-        </div>
-        </div>
+                <input class="send-button btn btn-primary btn-large blue darken-4 center " type="submit" id="buttonsm"
+                  value="Send Email" onclick="SendMail()">
+              </div>
       </form>
       <!--Opening Times-->
       <div class="container-fluid map-opening">
@@ -306,5 +312,6 @@
       </div>
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="assets/js/email.js"></script>
   </body>
 </html>
